# cctools-port

cctools/: Makefile.am  Makefile.in  configure  configure.ac
cctools/ar/: Makefile.am  Makefile.in  misc.c
cctools/as/: Makefile.am  Makefile.in  driver.c
cctools/as/arm/: Makefile.am  Makefile.in
cctools/as/i386/: Makefile.am  Makefile.in
cctools/as/ppc/: Makefile.am  Makefile.in
cctools/as/ppc64/: Makefile.am  Makefile.in
cctools/as/x86_64/: Makefile.am  Makefile.in
cctools/include/foreign/: dirent.h  dlfcn.h  err.h  fcntl.h  fts.h  paths.h  pwd.h  signal.h  stdio.h  stdlib.h  string.h  unistd.h
cctools/include/foreign/arpa/: inet.h
cctools/include/foreign/i386/: _structs.h  types.h
cctools/include/foreign/mach/: task_info.h
cctools/include/foreign/sys/: errno.h  file.h  mman.h  param.h  stat.h  sysctl.h  time.h  types.h
cctools/include/mach-o/: dyld.h  getsect.h  ldsyms.h  loader.h  nlist.h  ranlib.h
cctools/include/sys/: gmon.h
cctools/ld64/src/3rd/: helper.c
cctools/ld64/src/ld/: Makefile.am  Makefile.in  Options.cpp  OutputFile.cpp
cctools/ld64/src/other/: Makefile.am  Makefile.in
cctools/libforeign/: Makefile.am  Makefile.in
cctools/libforeign/win32/: binmode.c  mman.c  pread.c  utimes.c
cctools/libobjc2/: Makefile.am  Makefile.in  common.S  lock.h  objc_msgSend.x86-32.S
cctools/libstuff/: Makefile.am  Makefile.in  execute.c  ofile.c  port.c
cctools/libstuff/foreign/win32/: flock.c  fts.c  realpath.c  utimes.c
cctools/misc/: Makefile.am  Makefile.in  strip.c
cctools/otool/: Makefile.am  Makefile.in
(+6 files in other folders)
